[package]
name = "autotiling-rs"
version = "0.1.3"
authors = ["Jason Nader <jason.nader@protonmail.com>"]
description = "Autotiling for sway (and possibly i3)"
edition = "2018"

[dependencies]
swayipc = "3.0"
tokio = { version = "1.25.0", features = ["full"] }

[dependencies.clap]
version = "3.0"
default-features = false
features = ["std", "derive"]
